--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: fluidinfo-twisted-amqp
+Source: python-txamqp
 Section: python
 Priority: extra
 Maintainer: Esteve Fernandez <esteve@fluidinfo.com>
@@ -6,8 +6,9 @@ Build-Depends: cdbs, debhelper (>= 5.0.38), python-central (>= 0.5.6)
 Standards-Version: 3.7.2
 XS-Python-Version: 2.5
 
-Package: fluidinfo-twisted-amqp
+Package: python-txamqp
 Architecture: all
+Replaces: fluidinfo-twisted-amqp
 Depends: python-qpid (= 0.1~M2), ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
 XB-Python-Version: ${python:Versions}
 Description: An AMQP library for Twisted
