--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: python-txamqp
 Section: python
 Priority: extra
 Maintainer: Esteve Fernandez <esteve@fluidinfo.com>
-Build-Depends: cdbs, debhelper (>= 5.0.38), python-central (>= 0.5.6)
-Standards-Version: 3.7.2
+Build-Depends: cdbs, debhelper (>= 5.0.38), python-central (>= 0.5.6), python-all
+Standards-Version: 3.7.3
 XS-Python-Version: 2.5
 
 Package: python-txamqp
